--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,65 @@ body {
     background-color: #000;
 }
 
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    padding: 12px;
+    width: 300px;
+}
+
 .sidebar_navigation {
-    
+    background-color: #121212;
+    border-radius: 8px;
+    padding: 16px 0 0 16px;
+}
+
+.sidebar_navigation .logo {
+    background: #121212;
+    display: flex;
+    border-radius: 8px;
+    padding: 16px 0 0 16px;
+}
+
+.sidebar_navigation .logo img {
+    width: 80px;
+}
+
+.sidebar nav ul {
+    margin-top: 20px;
+    padding: 0 20px 10px 20px;
+}
+
+.sidebar ul li {
+    padding: 10px 0;
+}
+
+.sidebar nav ul li a {
+    color: #b3b3b3;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+    font-family: "DM Sans", sans-serif;
+}
+
+.biblioteca {
+    display: flex;
+    text-decoration: none;
+    margin-top: 20px;
+    padding: 0 20px 10px 20px;
+    background: #121212;
+}
+
+.biblioteca a {
+    color: #b3b3b3;
+    text-decoration: none;
+    font-weight: 800;
+    font-size: 16px;
+    font-family: "DM Sans", sans-serif;
+}
+
+.biblioteca .bottom-adicao {
+    margin: 0 40px;
 }
