--- a/src/style.css
+++ b/src/style.css
@@ -45,22 +45,155 @@ body {
     font-family: "DM Sans", sans-serif;
 }
 
-.biblioteca {
+.library {
+    background-color: #121212;
+    border-radius: 8px;
     display: flex;
-    text-decoration: none;
-    margin-top: 20px;
-    padding: 0 20px 10px 20px;
-    background: #121212;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 4px 8px;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 10px;
 }
 
-.biblioteca a {
+.library .library_content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.library .library_button {
+    display: flex;
+    margin-right: 10px;
     color: #b3b3b3;
+    background-color: transparent;
+    border: 0px;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
     text-decoration: none;
-    font-weight: 800;
-    font-size: 16px;
+    text-transform: none;
+    padding: 20px 10px;
+}
+
+.library .library_button .fa-solid {
+    font-size: 20px;
+    margin-right: 10px;
+    font-weight: 300;
+    padding-right: 8px;
+}
+
+.library .library_content .fa-plus {
+    margin: 24px 10px;
+} 
+
+.section-playlist {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    background-color: #242424;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 8px 0px;
+    padding: 16px 20px;
+    border-radius: 10px;
+}
+
+.section-playlist .section-playlist_content {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-playlist_content .text {
+    padding-bottom: 14px;
+    color: #fff;
     font-family: "DM Sans", sans-serif;
 }
 
-.biblioteca .bottom-adicao {
-    margin: 0 40px;
+.section-playlist_content .title {
+    font-weight: 700;
+}
+
+.section-playlist_content .subtitle {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist_content .section-playlist_button {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    margin-top: 12px;
+    border: 0px;
+    width: 113px;
+}
+
+.sidebar .cookies {
+    margin: 25px 20px;
+}
+
+.sidebar .cookies a {
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 10px;
+    text-decoration: none;
+}
+
+.sidebar .cookies a:hover {
+    text-decoration: underline;
+}
+
+.languages .languages_button {
+    align-items: center;
+    background-color: transparent;
+    border: 1px solid #878787;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+    width: 170px;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 20px;
+}
+
+.footer {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    padding: 20px;
+    width: 100vw;
+    background-image: linear-gradient(to right, pink, blue);
+}
+
+.footer .footer-background {
+    display: flex;
+    justify-content: space-between;
+    width: 100vw;
+}
+
+.footer .footer-background .footer-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-button-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer-button {
+    display: flex;
+    margin-right: 30px;
 }
