--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
     background-color: #000;
+    font-family: var(--font-dm-sans);
 }
 
 .sidebar {
@@ -42,7 +43,6 @@ body {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
 }
 
 .library {
@@ -71,7 +71,6 @@ body {
     border: 0px;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -111,7 +110,6 @@ body {
 .section-playlist_content .text {
     padding-bottom: 14px;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist_content .title {
@@ -131,7 +129,6 @@ body {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -168,32 +165,43 @@ body {
     border-radius: 20px;
 }
 
-.footer {
-    display: flex;
+.disclainer-premium {
     position: fixed;
-    bottom: 0;
-    padding: 20px;
-    width: 100vw;
-    background-image: linear-gradient(to right, pink, blue);
-}
-
-.footer .footer-background {
     display: flex;
     justify-content: space-between;
-    width: 100vw;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right, #101926, #2bdefd);
+    padding: 15px 40px;
 }
 
-.footer .footer-background .footer-text {
-    display: flex;
-    flex-direction: column;
+.disclainer-premium .text {
+    flex-shrink: 0;
 }
 
-.footer-button-container {
-    display: flex;
-    justify-content: flex-end;
+.disclainer-premium .disclainer-premium_title {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+    margin-bottom: 10px;
 }
 
-.footer-button {
-    display: flex;
-    margin-right: 30px;
+.disclainer-premium .disclainer-premium_subtitle {
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.disclainer-premium button {
+    background-color: #fff;
+    color: #000;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+    flex-shrink: 0;
 }
